* Fix online users iconbar hover * Attempt to use new iterate code to limit summary view messages - doesn't work yet * Revert fixed table change - unbreaks the good guys but breaks IE - will fix

--- a/webcit/static/webcit.css
+++ b/webcit/static/webcit.css
@@ -70,11 +70,14 @@ body {
 	text-transform: uppercase;
 }
 
-.ib_button, #room_infos, #address_book_popup,.roomops_cell, .roomops_cell_edit, .mimepart, .iconbar_text {
+.ib_button, #room_infos, #address_book_popup,.roomops_cell, .roomops_cell_edit, .mimepart, .iconbar_text{
 	background-color: #F0FFFF;
 	color: #333;
+} 
+#online_users:hover { /* separate in order for override */
+    background-color: #F0FFFF !important;
+	color: #333 !important;
 }
-
 #iconbar #button {
 	border: none;
 	list-style: none;
@@ -1096,7 +1099,7 @@ dt { clear: both; }
 	text-align: center;
 }
 #summary_view table {
-    table-layout: fixed; /* stops long subjects overflowing */
+/*    table-layout: fixed; stops long subjects overflowing */
 }
 #summary_view > table { /* hide from IE6 */
     width: 100%;
